--- a/@celastrina/http/package.json
+++ b/@celastrina/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@celastrina/http",
-  "version": "1.0.0beta-1",
+  "version": "1.0.0beta-2",
   "description": "HTTP Function Package for Celastrina",
   "main": "index.js",
   "scripts": {
@@ -15,11 +15,11 @@
     "Microsoft",
     "Azure",
     "Function",
-    "Securtiy",
-    "Authorization",
-    "Recaptcha",
     "Javascript",
-    "Node.js"
+    "Node.js",
+    "HTTP",
+    "JWT",
+    "Recaptcha"
   ],
   "author": "Robert R Murrell",
   "license": "MIT",
