--- a/@celastrina/message/package.json
+++ b/@celastrina/message/package.json
@@ -27,5 +27,10 @@
   "bugs": {
     "url": "https://github.com/murrellrr/celastrina/issues"
   },
-  "homepage": "https://github.com/murrellrr/celastrina#readme"
+  "homepage": "https://github.com/murrellrr/celastrina#readme",
+  "dependencies": {
+    "@celastrina/core": "^1.0.16-beta",
+    "moment": "^2.25.3",
+    "uuid": "^8.0.0"
+  }
 }
