--- a/@celastrina/core/package.json
+++ b/@celastrina/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@celastrina/core",
-  "version": "1.1.10.60beta",
+  "version": "1.1.2",
   "description": "Javascript Framework for simplifying Microsoft Azure Functions and supporting resources.",
   "main": "index.js",
   "scripts": {
