--- a/@celastrina/cosmos/package.json
+++ b/@celastrina/cosmos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@celatsrina/entity",
+  "name": "@celatsrina/cosmos",
   "version": "1.0.0",
   "description": "Light-weight Entity framework for use with Celastrina.js and Azure Cosmos DB.",
   "main": "index.js",
@@ -26,6 +26,6 @@
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
     "@azure/cosmos": "^3.6.3",
-    "@celastrina/core": "^1.1.1-0.43beta"
+    "@celastrina/core": "^1.3.8"
   }
 }
