--- a/@celastrina/core/package.json
+++ b/@celastrina/core/package.json
@@ -25,12 +25,11 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
-    "adal-node": "^0.2.1",
-    "axios": "^0.19.2",
+    "adal-node": "^0.2.2",
+    "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.25.3",
-    "querystring": "^0.2.0",
-    "uuid": "^3.4.0",
-    "validator": "^11.1.0"
+    "moment": "^2.29.1",
+    "querystring": "^0.2.1",
+    "uuid": "^8.3.2"
   }
 }
