--- a/@celastrina/message/package.json
+++ b/@celastrina/message/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@celastrina/message",
-  "version": "1.0.0beta-1",
+  "version": "1.4.991",
   "description": "Celastrina QStorage Function packages for Azure",
   "main": "index.js",
   "scripts": {
@@ -29,8 +29,8 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
-    "@celastrina/core": "^1.0.16-beta",
-    "moment": "^2.25.3",
-    "uuid": "^8.0.0"
+    "@celastrina/core": "^1.4.99",
+    "moment": "^2.29.1",
+    "uuid": "^8.3.2"
   }
 }
