--- a/@celastrina/timer/package.json
+++ b/@celastrina/timer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@celastrina/timer",
-  "version": "2.0.3",
+  "version": "2.0.5",
   "description": "Timer Function Package for Celastrina",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
-    "@celastrina/core": "^2.0.3"
+    "@celastrina/core": "^2.0.6",
+    "moment": "^2.29.1"
   }
 }
