--- a/@celastrina/http/package.json
+++ b/@celastrina/http/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@celastrina/http",
-  "version": "2.0.14",
+  "version": "2.0.17",
   "description": "HTTP Function Package for Celastrina",
   "main": "index.js",
   "scripts": {
@@ -28,9 +28,10 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
-    "@celastrina/core": "^2.0.61",
+    "@celastrina/core": "^2.1.1",
     "adal-node": "^0.2.2",
     "axios": "^0.21.1",
+    "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1"
   }
