--- a/@celastrina/core/package.json
+++ b/@celastrina/core/package.json
@@ -2,7 +2,7 @@
   "name": "@celastrina/core",
   "version": "2.1.1",
   "description": "Javascript Framework for simplifying Microsoft Azure Functions and supporting resources.",
-  "main": "index.js",
+  "main": "Core.js",
   "scripts": {
     "test": "mocha"
   },
@@ -33,6 +33,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "moment": "^2.29.1",
     "mocha": "^9.0.1"
   }
 }
