--- a/@celastrina/core/package.json
+++ b/@celastrina/core/package.json
@@ -33,7 +33,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "moment": "^2.29.1",
-    "mocha": "^9.0.1"
+    "mocha": "^9.0.1",
+    "sinon": "^11.1.1"
   }
 }
