--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,28 +4,28 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
 jobs:
   build:
-
+    
     runs-on: ubuntu-latest
-
+    
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+ 
     steps:
+    - working-directory: ./@celastrina/core
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
+
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: "$HOME/.npm"
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
