--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,10 +18,9 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
  
     steps:
-    - working-directory: ./@celastrina/core
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-
+      working-directory: ./@celastrina/core
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
