--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-        cache: "$HOME/.npm"
+        cache: "npm"
     - run: npm ci
            npm run build --if-present
            npm test
