--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,4 +25,4 @@ jobs:
     - run: npm ci
            npm run build --if-present
            npm test
-      working-directory: "./\@celastrina/core"
+      working-directory: "@celastrina/core"
