--- a/@celastrina/core/package.json
+++ b/@celastrina/core/package.json
@@ -4,6 +4,7 @@
   "description": "Javascript Framework for simplifying Microsoft Azure Functions and supporting resources.",
   "main": "Core.js",
   "scripts": {
+    "build": "exit 1",
     "test": "mocha"
   },
   "repository": {
