--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: "npm"
-    - run: npm ci
-           npm run build --if-present
-           npm test
+    - run: |
+             npm ci
+             npm run build --if-present
+             npm test
       working-directory: "@celastrina/core"
