--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, development ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, development ]
 
 jobs:
   build:
@@ -31,6 +31,7 @@ jobs:
         npm ci
         npm run build --if-present
         npm test
+        cp -R * ../dist/@celastrina/http
       working-directory: "@celastrina/http"
     - run: |
         npm ci
