--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,30 +26,5 @@ jobs:
         npm ci
         npm run build --if-present
         npm test
-        cp -R * ../dist/@celastrina/http
       working-directory: "@celastrina/core"
-    - run: |
-        npm ci
-        npm run build --if-present
-        npm test
-      working-directory: "@celastrina/http"
-    - run: |
-        npm ci
-        npm run build --if-present
-        npm test
-      working-directory: "@celastrina/message"
-    - run: |
-        npm ci
-        npm run build --if-present
-        npm test
-      working-directory: "@celastrina/semaphore"
-    - run: |
-        npm ci
-        npm run build --if-present
-        npm test
-      working-directory: "@celastrina/timer"
-    - run: |
-        npm ci
-        npm run build --if-present
-        npm test
-      working-directory: "@celastrina/transact"
+    - run: cp -R @celastrina ./dist
