--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,3 +27,8 @@ jobs:
         npm run build --if-present
         npm test
       working-directory: "@celastrina/core"
+    - run: |
+        npm ci
+        npm run build --if-present
+        npm test
+      working-directory: "@celastrina/http"
