--- a/@celastrina/http/package.json
+++ b/@celastrina/http/package.json
@@ -4,7 +4,7 @@
   "description": "HTTP Function Package for Celastrina",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -28,11 +28,15 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
-    "@celastrina/core": "^2.1.1",
+    "@celastrina/core": "^4.0.0",
     "adal-node": "^0.2.2",
     "axios": "^0.21.1",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "mocha": "^9.0.1",
+    "sinon": "^11.1.1"
   }
 }
