Fixed and added test for CelastrinaValidationError

--- a/@celastrina/http/package.json
+++ b/@celastrina/http/package.json
@@ -28,12 +28,13 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
-    "@celastrina/core": "^4.0.0",
+    "@celastrina/core": "^4.0.1",
     "adal-node": "^0.2.2",
     "axios": "^0.21.1",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "mocha": "^9.0.1",
