--- a/@celastrina/http/package.json
+++ b/@celastrina/http/package.json
@@ -33,10 +33,12 @@
     "axios": "^0.21.1",
     "cookie": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.5",
     "moment": "^2.29.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.20.0",
     "mocha": "^9.0.1",
     "sinon": "^11.1.1"
   }
