--- a/@celastrina/core/package.json
+++ b/@celastrina/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@celastrina/core",
-  "version": "4.1.12",
+  "version": "4.2.12",
   "description": "Javascript Framework for simplifying Microsoft Azure Functions and supporting resources.",
   "main": "Core.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.20.0",
     "mocha": "^9.0.1",
     "sinon": "^11.1.1"
   }
