Refactored how Sentry works, renamed context and sentry, consolidated configuration, added AddOn.

--- a/@celastrina/recaptcha/package.json
+++ b/@celastrina/recaptcha/package.json
@@ -25,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/murrellrr/celastrina/issues"
   },
-  "homepage": "https://github.com/murrellrr/celastrina#readme"
+  "homepage": "https://github.com/murrellrr/celastrina#readme",
+  "dependencies": {
+    "@celastrina/http": "^4.0.0"
+  }
 }
