Updated for new AppConfig override on init/load.

--- a/@celastrina/message/package.json
+++ b/@celastrina/message/package.json
@@ -29,7 +29,9 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
-    "@celastrina/core": "^4.5.22",
+    "@celastrina/core": "^4.6.23",
+    "@celastrina/http": "^4.2.2",
+    "cloudevents": "^5.0.0",
     "moment": "^2.29.1",
     "uuid": "^8.3.2"
   }
