--- a/@celastrina/message/package.json
+++ b/@celastrina/message/package.json
@@ -30,9 +30,12 @@
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
     "@celastrina/core": "^4.6.26",
-    "@celastrina/http": "^4.3.4",
+    "@celastrina/http": "^4.3.5",
     "cloudevents": "^5.0.0",
+    "axios-mock-adapter": "^1.20.0",
     "moment": "^2.29.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "mocha": "^9.0.1",
+    "sinon": "^11.1.1"
   }
 }
