--- a/@celastrina/timer/package.json
+++ b/@celastrina/timer/package.json
@@ -24,7 +24,12 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
-    "@celastrina/core": "^4.5.23",
+    "@celastrina/core": "^4.7.28",
     "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "axios-mock-adapter": "^1.20.0",
+    "mocha": "^9.0.1",
+    "sinon": "^11.1.1"
   }
 }
