Updated to run test on check-in.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,3 +32,8 @@ jobs:
         npm run build --if-present
         npm test
       working-directory: "@celastrina/http"
+    - run: |
+        npm ci
+        npm run build --if-present
+        npm test
+      working-directory: "@celastrina/timer"
