--- a/@celastrina/core/package.json
+++ b/@celastrina/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@celastrina/core",
-  "version": "4.8.29",
+  "version": "4.9.30",
   "description": "Javascript Framework for simplifying Microsoft Azure Functions and supporting resources.",
   "main": "Core.js",
   "scripts": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/murrellrr/celastrina#readme",
   "dependencies": {
+    "@azure/identity": "^2.0.1",
     "adal-node": "^0.2.2",
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
